# gimmewire

./: .gitignore  Cargo.toml  Dockerfile  gimmewire.conf
src/: bot.rs  main.rs  mongo.rs  wireguard.rs
