[package]
name = "gimmewire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.21.2", features = ["rt-multi-thread", "macros", "process"] }
dotenvy = "0.15"
mongodb = "2.3.1"
configparser = "3.0.2"
serde = "1.0.147"
simple-error = "0.2.3"
futures = "0.3.25"
clap = {version = "4.0.29", features = ["derive"]}
dirs = "4.0.0"